tests/neg-custom-args/captures/sepchecks2.check
-- Error: tests/neg-custom-args/captures/sepchecks2.scala:10:10 --------------------------------------------------------
10 |  println(c) // error
   |          ^
   |          Separation failure: Illegal access to {c} which is hidden by the previous definition
   |          of value xs with type List[box () => Unit].
   |          This type hides capabilities  {xs*, c}
-- Error: tests/neg-custom-args/captures/sepchecks2.scala:13:33 --------------------------------------------------------
13 |  foo((() => println(c)) :: Nil, c) // error
   |                                 ^
   |                                 Separation failure: argument of type  (c : Object^)
   |                                 to method foo: (xs: List[box () => Unit], y: Object^): Nothing
   |                                 corresponds to capture-polymorphic formal parameter y of type  Object^
   |                                 and captures {c}, but this capability is also passed separately
   |                                 in the first argument with type  List[box () ->{c} Unit].
   |
   |                                   Capture set of first argument         : {c}
   |                                   Hidden set of current argument        : {c}
   |                                   Footprint of first argument           : {c}
   |                                   Hidden footprint of current argument  : {c}
   |                                   Declared footprint of current argument: {}
   |                                   Undeclared overlap of footprints      : {c}
-- Error: tests/neg-custom-args/captures/sepchecks2.scala:14:10 --------------------------------------------------------
14 |  val x1: (Object^, Object^) = (c, c) // error
   |          ^^^^^^^^^^^^^^^^^^
   |          Separation failure in type (box Object^, box Object^).
   |          One part,  box Object^ , hides  {c}.
   |          A previous part,  box Object^ ,  also hides  {c}.
   |          The two sets overlap at  {c}.
-- Error: tests/neg-custom-args/captures/sepchecks2.scala:15:10 --------------------------------------------------------
15 |  val x2: (Object^, Object^{d}) = (d, d) // error
   |          ^^^^^^^^^^^^^^^^^^^^^
   |          Separation failure in type (box Object^, box Object^{d}).
   |          One part,  box Object^{d} , references  {d}.
   |          A previous part,  box Object^ ,  hides  {d}.
   |          The two sets overlap at  {d}.
-- Error: tests/neg-custom-args/captures/sepchecks2.scala:27:6 ---------------------------------------------------------
27 |  bar((c, c)) // error
   |      ^^^^^^
   |      Separation failure in the argument's adapted type type (box Object^, box Object^).
   |      One part,  box Object^ , hides  {c}.
   |      A previous part,  box Object^ ,  also hides  {c}.
   |      The two sets overlap at  {c}.
